--- a/index.html
+++ b/index.html
@@ -21,21 +21,57 @@
     firebase.initializeApp(firebaseConfig);
   </script>
   <style>
-    /* ...сюда вставь свой css-код или подключи styles.css... */
-    body { background: #140d29; color: #fff; font-family: Montserrat, Arial, sans-serif; }
-    /* для демо - простая минимальная стилизация */
-    input,button,select,textarea { margin: 6px 0; padding: 10px; border-radius:6px; border:none}
-    .modal-content { background: #242348; padding: 24px; border-radius: 10px; max-width: 340px; margin:auto; }
-    .modal { display: flex; justify-content: center; align-items: center; min-height: 100vh;}
-    .modal-content input { width:92%; }
-    .brandbar, .hero { padding: 24px 16px;}
-    .brandbar { display:flex; gap:12px; background:#201e35;}
-    .hero {text-align:center;}
-    .hero-buttons button{margin:0 16px;}
+    /* Оставь свои стили, как в оригинале */
+    body { background: linear-gradient(180deg, #0a0e27 0%, #1a1f3a 50%, #0f1419 100%);
+      color: #fff; font-family: Montserrat, Arial, sans-serif; }
+    header {
+      background: rgba(25, 25, 49, 0.92); color: gold; padding: 16px 20px;
+      font-weight: bold; font-size: 1.1em; letter-spacing: 1px;
+      display: flex; align-items: center; justify-content: space-between;
+      border-bottom: 3px solid gold;
+    }
+    header span { font-size: 1.5em; text-shadow: 0 0 12px gold; }
+    header button {
+      background: gold; color: #232846; font-weight: bold;
+      border: none; border-radius: 8px; cursor: pointer; padding: 8px 24px; font-size: 1em;
+    }
+    .hero { text-align: center; padding: 60px 0 30px 0;}
+    .hero h1 { font-size: 2.8em; margin-bottom: 20px; color: #fff; text-shadow:0 0 18px gold; }
+    .hero p { font-size: 1.1em; color: #e2e2ff; margin-bottom: 34px;}
+    .hero-buttons button {
+      background: #232846; color: gold; border: 2px solid gold; margin:8px; padding:12px 32px;
+      border-radius:9px; font-weight:bold; cursor:pointer; font-size:1.15em;
+      box-shadow: 0 0 18px gold;
+    }
+    .hero-buttons button:hover { background: gold; color: #232846;}
+    /* Модальное окно */
+    .modal { display: none; position:fixed; top:0; left:0; right:0; bottom:0; background:rgba(18,18,36,.97); z-index:200; justify-content:center; align-items:center; }
+    .modal.show { display: flex !important;}
+    .modal-content { background: linear-gradient(135deg, #232846 0%, #353c60 100%);
+      padding: 32px 26px; border-radius: 14px; min-width: 340px; color:#fff;
+      box-shadow:0 0 40px #232846; font-size:1em;
+    }
+    .tab-buttons { display: flex; gap: 20px; margin-bottom: 18px;}
+    .tab-btn { flex: 1; padding: 10px 10px; background: #232846; color: gold;
+      border: 2px solid gold; border-radius: 7px; font-weight: bold;
+      font-size: 1em; cursor: pointer; transition: all .2s;}
+    .tab-btn.active { background: gold; color: #232846;}
+    .tab-content { display: none;}
+    .tab-content.active { display: block;}
+    .modal-content input, .modal-content select, .modal-content textarea {
+      width:97%; margin:9px 0; padding:10px 8px; border-radius:7px; border:none; font-size:1em;
+      background: #292b44;
+      color: #ffd700;
+    }
+    .modal-content button { width:100%; margin:10px 0 6px 0; padding:10px 0; background: gold; color:#232846; font-weight:700; border:none; border-radius:7px; font-size:1em; cursor:pointer;}
+    .modal-content button:hover { background: #FFE000;}
+    hr {border: none; border-top: 1px solid #FFD700; margin: 16px 0;}
+    /* Cards, sections - можно оставить как было, если есть */
+    /* ... Остальные кастомные стили ... */
   </style>
 </head>
 <body>
-<header class="brandbar">
+<header>
   <span>🎤 PALAN HYPE</span>
   <button onclick="openAuth()">Вход/Регистрация</button>
 </header>
@@ -43,32 +79,34 @@
   <h1>PALAN HYPE AGENCY</h1>
   <p>Найди идеального исполнителя для своего мероприятия</p>
   <div class="hero-buttons">
-    <button>Ведущие</button>
-    <button>DJ</button>
-    <button>Музыканты</button>
+    <button onclick="showSection('vedushie')">Ведущие</button>
+    <button onclick="showSection('dj')">DJ</button>
+    <button onclick="showSection('music')">Музыканты</button>
   </div>
 </div>
+<!-- ...Твои секции-карточки, красиво оформленные блоки оставь или допиши... -->
 
-<div id="modal-auth" class="modal" style="display:none;">
+<div id="modal-auth" class="modal">
   <div class="modal-content">
-    <div>
-      <button onclick="switchTab('client')">Клиент</button>
-      <button onclick="switchTab('artist')">Исполнитель</button>
+    <div class="tab-buttons">
+      <button class="tab-btn active" onclick="switchTab(event, 'client-tab')">👤 Клиент</button>
+      <button class="tab-btn" onclick="switchTab(event, 'artist-tab')">🎤 Исполнитель</button>
     </div>
-    <div id="client-tab">
-      <h2>Регистрация клиента</h2>
+    <div id="client-tab" class="tab-content active">
+      <h2 style="margin-bottom:14px;">Регистрация клиента</h2>
       <input id="client-name" type="text" placeholder="Ваше имя">
       <input id="client-email" type="email" placeholder="E-mail">
       <input id="client-phone" type="tel" placeholder="Телефон">
       <input id="client-password" type="password" placeholder="Пароль">
       <button onclick="registerUser()">Зарегистрироваться</button>
-      <h3>Вход клиента</h3>
+      <hr>
+      <h3 style="margin-bottom:8px;">Вход</h3>
       <input id="client-login-email" type="email" placeholder="E-mail">
       <input id="client-login-password" type="password" placeholder="Пароль">
       <button onclick="loginUser()">Войти</button>
     </div>
-    <div id="artist-tab" style="display:none;">
-      <h2>Регистрация ведущего/артиста</h2>
+    <div id="artist-tab" class="tab-content">
+      <h2 style="margin-bottom:14px;">Регистрация исполнителя</h2>
       <input id="artist-name" type="text" placeholder="Имя/Псевдоним">
       <input id="artist-email" type="email" placeholder="E-mail">
       <input id="artist-phone" type="tel" placeholder="Телефон">
@@ -81,21 +119,30 @@
       </select>
       <textarea id="artist-desc" placeholder="О себе и опыте"></textarea>
       <button onclick="registerArtist()">Зарегистрироваться</button>
-      <h3>Вход артиста</h3>
+      <hr>
+      <h3>Вход исполнителя</h3>
       <input id="artist-login-email" type="email" placeholder="E-mail">
       <input id="artist-login-password" type="password" placeholder="Пароль">
       <button onclick="loginArtist()">Войти</button>
     </div>
-    <button onclick="closeAuth()">❌ Закрыть</button>
+    <button onclick="closeAuth()" style="background:#FFD700;color:#222; margin-top:8px;">Закрыть</button>
   </div>
 </div>
+<!-- ...Твои карточки ведущих, DJ, муз. и прочие секции... -->
 
 <script>
-function openAuth(){document.getElementById('modal-auth').style.display='flex';}
-function closeAuth(){document.getElementById('modal-auth').style.display='none';}
-function switchTab(tab){
-  document.getElementById('client-tab').style.display = (tab==='client')?'block':'none';
-  document.getElementById('artist-tab').style.display = (tab==='artist')?'block':'none';
+function openAuth(){document.getElementById('modal-auth').classList.add('show');}
+function closeAuth(){document.getElementById('modal-auth').classList.remove('show');}
+function switchTab(e,tabId){
+  document.querySelectorAll('.tab-content').forEach(t=>t.classList.remove('active'));
+  document.querySelectorAll('.tab-btn').forEach(b=>b.classList.remove('active'));
+  document.getElementById(tabId).classList.add('active'); e.target.classList.add('active');
+}
+// Категории секций - твоя старая логика showSection
+function showSection(name) {
+  document.querySelectorAll('.hero-buttons button').forEach(btn => btn.style.background = '#232846');
+  document.querySelector('.hero-buttons button[onclick*="'+name+'"]').style.background = 'gold';
+  // Здесь можно показывать карточки ведущих, DJ и музыкантов по name
 }
 
 // Регистрация клиента
@@ -119,7 +166,6 @@ function registerUser() {
     .catch(error => { alert('Ошибка: ' + error.message); });
 }
 
-// Вход клиента
 function loginUser() {
   const email = document.getElementById('client-login-email').value;
   const password = document.getElementById('client-login-password').value;
@@ -128,7 +174,6 @@ function loginUser() {
     .catch((error) => {alert('Ошибка: '+error.message);});
 }
 
-// Регистрация исполнителя/артиста
 function registerArtist(){
   const name = document.getElementById('artist-name').value;
   const email = document.getElementById('artist-email').value;
@@ -151,8 +196,6 @@ function registerArtist(){
     .then(()=>{ alert('Артист зарегистрирован!'); closeAuth(); })
     .catch(error => { alert('Ошибка: ' + error.message); });
 }
-
-// Вход артиста
 function loginArtist() {
   const email = document.getElementById('artist-login-email').value;
   const password = document.getElementById('artist-login-password').value;
@@ -160,6 +203,7 @@ function loginArtist() {
     .then(() => { alert('Вход исполнителя выполнен!'); closeAuth();})
     .catch((error) => {alert('Ошибка: '+error.message);});
 }
+// Оставь всю свою старую логику для работы сайта
 </script>
 </body>
 </html>
