--- a/index.html
+++ b/index.html
@@ -21,53 +21,43 @@
     firebase.initializeApp(firebaseConfig);
   </script>
   <style>
-    /* Оставь свои стили, как в оригинале */
     body { background: linear-gradient(180deg, #0a0e27 0%, #1a1f3a 50%, #0f1419 100%);
       color: #fff; font-family: Montserrat, Arial, sans-serif; }
     header {
-      background: rgba(25, 25, 49, 0.92); color: gold; padding: 16px 20px;
+      background: #181832; color: gold; padding: 16px 20px;
       font-weight: bold; font-size: 1.1em; letter-spacing: 1px;
       display: flex; align-items: center; justify-content: space-between;
       border-bottom: 3px solid gold;
     }
-    header span { font-size: 1.5em; text-shadow: 0 0 12px gold; }
-    header button {
-      background: gold; color: #232846; font-weight: bold;
-      border: none; border-radius: 8px; cursor: pointer; padding: 8px 24px; font-size: 1em;
-    }
-    .hero { text-align: center; padding: 60px 0 30px 0;}
-    .hero h1 { font-size: 2.8em; margin-bottom: 20px; color: #fff; text-shadow:0 0 18px gold; }
-    .hero p { font-size: 1.1em; color: #e2e2ff; margin-bottom: 34px;}
+    header span { font-size: 1.5em; text-shadow: 0 0 14px gold; }
+    header button { background: gold; color: #232846; font-weight: bold;
+      border: none; border-radius: 8px; cursor: pointer; padding: 9px 26px; font-size: 1em;}
+    .hero { text-align: center; padding: 48px 12px;}
+    .hero h1 { font-size: 2.5em; margin-bottom: 16px; color: gold; text-shadow:0 0 14px #897323; }
+    .hero p { font-size: 1.25em; color: #92edff; margin-bottom: 34px;}
     .hero-buttons button {
-      background: #232846; color: gold; border: 2px solid gold; margin:8px; padding:12px 32px;
-      border-radius:9px; font-weight:bold; cursor:pointer; font-size:1.15em;
-      box-shadow: 0 0 18px gold;
-    }
+      background: #232846; color: gold; border: 2px solid gold; margin:10px; padding:12px 32px;
+      border-radius:12px; font-weight:bold; cursor:pointer; font-size:1.2em;}
     .hero-buttons button:hover { background: gold; color: #232846;}
-    /* Модальное окно */
-    .modal { display: none; position:fixed; top:0; left:0; right:0; bottom:0; background:rgba(18,18,36,.97); z-index:200; justify-content:center; align-items:center; }
+    /* Модалка */
+    .modal { display:none; position:fixed; z-index:500; top:0;left:0;right:0;bottom:0; background:rgba(10,10,20,.97); justify-content:center; align-items:center;}
     .modal.show { display: flex !important;}
-    .modal-content { background: linear-gradient(135deg, #232846 0%, #353c60 100%);
-      padding: 32px 26px; border-radius: 14px; min-width: 340px; color:#fff;
-      box-shadow:0 0 40px #232846; font-size:1em;
-    }
-    .tab-buttons { display: flex; gap: 20px; margin-bottom: 18px;}
-    .tab-btn { flex: 1; padding: 10px 10px; background: #232846; color: gold;
-      border: 2px solid gold; border-radius: 7px; font-weight: bold;
-      font-size: 1em; cursor: pointer; transition: all .2s;}
+    .modal-content { background:#232846; padding: 28px 18px; border-radius: 14px; min-width: 320px; box-shadow:0 0 40px #333;}
+    .tab-buttons { display: flex; gap: 12px; margin-bottom: 14px;}
+    .tab-btn { flex: 1; padding: 9px 0; background: #232846; color: gold;
+      border: 2px solid gold; border-radius: 8px; font-weight: bold; cursor: pointer;}
     .tab-btn.active { background: gold; color: #232846;}
-    .tab-content { display: none;}
-    .tab-content.active { display: block;}
+    .tab-content { display:none;}
+    .tab-content.active { display:block;}
     .modal-content input, .modal-content select, .modal-content textarea {
-      width:97%; margin:9px 0; padding:10px 8px; border-radius:7px; border:none; font-size:1em;
+      width:96%; margin:7px 0; padding:8px 8px; border-radius:7px; border:none; font-size:1em;
       background: #292b44;
       color: #ffd700;
     }
-    .modal-content button { width:100%; margin:10px 0 6px 0; padding:10px 0; background: gold; color:#232846; font-weight:700; border:none; border-radius:7px; font-size:1em; cursor:pointer;}
-    .modal-content button:hover { background: #FFE000;}
-    hr {border: none; border-top: 1px solid #FFD700; margin: 16px 0;}
-    /* Cards, sections - можно оставить как было, если есть */
-    /* ... Остальные кастомные стили ... */
+    .modal-content button { width:98%; margin:9px 0 6px 0; padding:9px 0; background: gold; color:#232846; font-weight:700; border:none; border-radius:8px; font-size:1em; cursor:pointer;}
+    .modal-content button:hover { background: #FFE353;}
+    hr {border: none; border-top: 1px solid #FFD700; margin: 12px 0;}
+    /* карточки и другие стили добавляй свои! */
   </style>
 </head>
 <body>
@@ -79,13 +69,18 @@
   <h1>PALAN HYPE AGENCY</h1>
   <p>Найди идеального исполнителя для своего мероприятия</p>
   <div class="hero-buttons">
-    <button onclick="showSection('vedushie')">Ведущие</button>
-    <button onclick="showSection('dj')">DJ</button>
-    <button onclick="showSection('music')">Музыканты</button>
+    <button>Ведущие</button>
+    <button>DJ</button>
+    <button>Музыканты</button>
   </div>
 </div>
-<!-- ...Твои секции-карточки, красиво оформленные блоки оставь или допиши... -->
 
+<!-- Добавь здесь любые карточки и секции, которые у тебя были (пример:) -->
+<main>
+  <!-- Твой каталог, карточки исполнителей и любые дополнительные блоки -->
+</main>
+
+<!-- Модальное окно регистрации/входа -->
 <div id="modal-auth" class="modal">
   <div class="modal-content">
     <div class="tab-buttons">
@@ -93,20 +88,20 @@
       <button class="tab-btn" onclick="switchTab(event, 'artist-tab')">🎤 Исполнитель</button>
     </div>
     <div id="client-tab" class="tab-content active">
-      <h2 style="margin-bottom:14px;">Регистрация клиента</h2>
+      <h2>Регистрация клиента</h2>
       <input id="client-name" type="text" placeholder="Ваше имя">
       <input id="client-email" type="email" placeholder="E-mail">
       <input id="client-phone" type="tel" placeholder="Телефон">
       <input id="client-password" type="password" placeholder="Пароль">
       <button onclick="registerUser()">Зарегистрироваться</button>
       <hr>
-      <h3 style="margin-bottom:8px;">Вход</h3>
+      <h3>Вход клиента</h3>
       <input id="client-login-email" type="email" placeholder="E-mail">
       <input id="client-login-password" type="password" placeholder="Пароль">
       <button onclick="loginUser()">Войти</button>
     </div>
     <div id="artist-tab" class="tab-content">
-      <h2 style="margin-bottom:14px;">Регистрация исполнителя</h2>
+      <h2>Регистрация исполнителя</h2>
       <input id="artist-name" type="text" placeholder="Имя/Псевдоним">
       <input id="artist-email" type="email" placeholder="E-mail">
       <input id="artist-phone" type="tel" placeholder="Телефон">
@@ -125,10 +120,9 @@
       <input id="artist-login-password" type="password" placeholder="Пароль">
       <button onclick="loginArtist()">Войти</button>
     </div>
-    <button onclick="closeAuth()" style="background:#FFD700;color:#222; margin-top:8px;">Закрыть</button>
+    <button onclick="closeAuth()" style="background:#ffd700;color:#232846;margin-top:10px;">Закрыть</button>
   </div>
 </div>
-<!-- ...Твои карточки ведущих, DJ, муз. и прочие секции... -->
 
 <script>
 function openAuth(){document.getElementById('modal-auth').classList.add('show');}
@@ -137,12 +131,6 @@ function switchTab(e,tabId){
   document.querySelectorAll('.tab-content').forEach(t=>t.classList.remove('active'));
   document.querySelectorAll('.tab-btn').forEach(b=>b.classList.remove('active'));
   document.getElementById(tabId).classList.add('active'); e.target.classList.add('active');
-}
-// Категории секций - твоя старая логика showSection
-function showSection(name) {
-  document.querySelectorAll('.hero-buttons button').forEach(btn => btn.style.background = '#232846');
-  document.querySelector('.hero-buttons button[onclick*="'+name+'"]').style.background = 'gold';
-  // Здесь можно показывать карточки ведущих, DJ и музыкантов по name
 }
 
 // Регистрация клиента
@@ -165,7 +153,7 @@ function registerUser() {
     .then(()=>{ alert('Регистрация клиента прошла!'); closeAuth(); })
     .catch(error => { alert('Ошибка: ' + error.message); });
 }
-
+// Вход клиента
 function loginUser() {
   const email = document.getElementById('client-login-email').value;
   const password = document.getElementById('client-login-password').value;
@@ -173,7 +161,7 @@ function loginUser() {
     .then(() => { alert('Вход выполнен!'); closeAuth(); })
     .catch((error) => {alert('Ошибка: '+error.message);});
 }
-
+// Регистрация артиста
 function registerArtist(){
   const name = document.getElementById('artist-name').value;
   const email = document.getElementById('artist-email').value;
@@ -196,6 +184,7 @@ function registerArtist(){
     .then(()=>{ alert('Артист зарегистрирован!'); closeAuth(); })
     .catch(error => { alert('Ошибка: ' + error.message); });
 }
+// Вход артиста
 function loginArtist() {
   const email = document.getElementById('artist-login-email').value;
   const password = document.getElementById('artist-login-password').value;
@@ -203,7 +192,6 @@ function loginArtist() {
     .then(() => { alert('Вход исполнителя выполнен!'); closeAuth();})
     .catch((error) => {alert('Ошибка: '+error.message);});
 }
-// Оставь всю свою старую логику для работы сайта
 </script>
 </body>
 </html>
